fix phone icon alignment

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -333,14 +333,14 @@ li:last-child
 }  
 .appointment .header a i
 {
-    width: 32px;
-    height: 32px;
-    border-radius: 16px;
+    width: 36px;
+    height: 36px;
+    border-radius: 18px;
     border: 2px solid #fff;
     background: #6DBEC2;
     color: white;
-    padding-top: 3px;
-    padding-left: 6px;
+    padding-top: 4px;
+    padding-left: 1px;
 }
 .appointment .header .or 
 {
